# Deep_Past_Challenge

./: .gitignore  AGENTS.md  README.md  pyproject.toml  train (4).csv
Deep-Past-Challenge/: .gitignore  __init__.py  data.py  pyproject.toml
Deep-Past-Challenge/csiro/: __init__.py  config.py  data.py  eval.py  model.py  train.py  transforms.py
Deep-Past-Challenge/csiro/scripts/: train_cv_func.py
Deep-Past-Challenge/notebooks/: ensemble-siglip-with-dinov3-lb-0-71.ipynb
Deep-Past-Challenge/notebooks/cv/: cv_split_v1.ipynb
Deep-Past-Challenge/paperspace_scripts/setups/: schedule.yaml
Deep-Past-Challenge/paperspace_scripts/setups/configs/experiments/: exp1.yaml
Deep-Past-Challenge/scripts/: sanity_check.py
DeepPastChallenge/: __init__.py  akkadian-english-byt5-optimized-again.ipynb  amp.py  comet_utils.py  config.py  data.py  infer.py  metrics.py  textproc.py  tqdm_callback.py  train.py  train_trainer.py
DeepPastChallenge/configs/: train_base.yaml
DeepPastChallenge/v0/: data.py  (+3 more)
configs/: infer_base.yaml  train_base.yaml  train_trainer_base.yaml
csiro-baseline/: pyproject.toml
csiro-baseline/_dinov3/dinov3/layers/: block.py
csiro-baseline/_dinov3/dinov3/models/: vision_transformer.py
csiro-baseline/csiro/: amp.py  config.py  ensemble_utils.py  losses.py  metrics.py  utils.py
csiro-baseline/notebooks/eda/files/: oof_preds.csv
csiro-baseline/paperspace_scripts/: main_train.py
csiro-baseline/paperspace_scripts/setups/: gpu_backup.sh  quick_launch.py  scheduler.py  terminal_launch.py  train_vit.py  venv_run.sh
csiro-baseline/paperspace_scripts/setups/configs/: base.yaml
notebooks/: NOTEBOOK_HEADER_RULES.md  cisro-baseline-train-infer-21-12-dinov3-siglip (1).ipynb  ensemble-siglip-with-dinov3-lb-0-71.ipynb
paperspace_scripts/: main_train.py
(+30 files in other folders)
