[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-past-challenge"
version = "0.1.0"
description = "Deep Past Initiative machine translation baseline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "torch",
  "transformers",
  "sacrebleu",
  "sentencepiece",
  "datasets",
  "evaluate",
]

[project.optional-dependencies]
comet = ["comet-ml"]
inference = ["optimum"]

[tool.setuptools.packages.find]
where = ["."]
include = ["DeepPastChallenge*"]
